<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="label_bill">Bill</string>
    <string name="label_tip_percent">Tip (%)</string>
    <string name="label_tip">Tip ($)</string>
    <string name="label_total">Total</string>


    <string name="amount_bill_hint">Enter Bill</string>
    <string name="amount_tip_percent_hint">Enter Tip</string>

    <string name="button_calculate">CALCULATE</string>

    <string name="percent_small">15%</string>
    <string name="percent_large">20%</string>
    <string name="percent_custom">Custom</string>

</resources>