<?xml version="1.0" encoding="utf-8"?>
<!-- <android.support.constraint.ConstraintLayout -->
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bes12.tipcalc.MainActivity">

    <TextView
        android:id="@+id/label_bill"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:minWidth="120dp"
        android:textSize="28sp"
        android:text="@string/label_bill"/>

    <EditText
        android:id="@+id/amount_bill"
        style="@style/InputStyle"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/label_bill"
        android:layout_alignBottom="@+id/label_bill"
        android:layout_alignParentRight="true"
        android:hint="@string/amount_bill_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/label_tip_percent"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/label_bill"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:text="@string/label_tip_percent"/>

    <EditText
        android:id="@+id/amount_tip_percent"
        style="@style/InputStyle"
        android:layout_toRightOf="@+id/label_tip_percent"
        android:layout_alignBottom="@+id/label_tip_percent"
        android:layout_alignRight="@id/amount_bill"
        android:hint="@string/amount_tip_percent_hint"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount_tip_percent"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/percent_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_small"
            android:checked="true"
        />
        <RadioButton
            android:id="@+id/percent_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_large"
        />
    </RadioGroup>





    <!-- red line -->
    <View
        android:id="@+id/red_line"
        android:layout_below="@+id/radio_group"
        android:layout_marginTop="20dp"
        android:layout_height="5dip"
        android:layout_width="match_parent"
        android:layout_alignLeft="@id/label_bill"
        android:layout_alignRight="@id/amount_bill"
        android:background="#FF00" />

    <TextView
        android:id="@+id/label_tip"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:layout_below="@id/red_line"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:text="@string/label_tip" />

    <TextView
        android:id="@+id/amount_tip"
        style="@style/OutputStyle"
        android:layout_toRightOf="@+id/label_tip"
        android:layout_alignBottom="@+id/label_tip"
        android:layout_alignRight="@id/amount_bill"/>

    <TextView
        android:id="@+id/label_total"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:layout_below="@id/label_tip"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:text="@string/label_total" />

    <TextView
        android:id="@+id/amount_total"
        style="@style/OutputStyle"
        android:layout_toRightOf="@+id/label_total"
        android:layout_alignBottom="@+id/label_total"
        android:layout_alignRight="@id/amount_bill"/>


    </RelativeLayout>
<!-- </android.support.constraint.ConstraintLayout> -->
